fixed button gap

--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -5,6 +5,10 @@
     background-color: #EDF2F4;
    
 }
+.btncontainer{
+    display: flex;
+    column-gap:5px ;
+}
 .todocontainer{
     display: flex;
     align-items: center;
